force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Result_To_Date__c.field-meta.xml
<CustomField>
    <fullName>ampi__Result_To_Date__c</fullName>
    <description>This field is populated with either the sum of all results on all result records or the sum of all results on result records from the most recent Reporting Period, depending on the value in the Cumulative field. This field is populated/updated by the triggers on Result.</description>
    <label>Result To Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>