force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Target_Frequency__c.field-meta.xml
<CustomField>
    <fullName>ampi__Target_Frequency__c</fullName>
    <description>This picklist field is used to set a frequency at which only targets are reported.</description>
    <inlineHelpText>Use this field to set a frequency at which only targets are reported.</inlineHelpText>
    <label>Target Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Biannual</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Life of Project</fullName>
            </value>
            <value>
                <fullName>--</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>