force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Target_Frequency_Formula__c.field-meta.xml
<CustomField>
    <fullName>ampi__Target_Frequency_Formula__c</fullName>
    <description>If Target Frequency is populated, returns that value. If Target Frequency is null, returns the value of Reporting Frequency. Additional Project Indicator Reporting Period records are created for a different Target Frequency, depending on the value in this field.</description>
    <formula>IF(
  ISBLANK(TEXT(ampi__Target_Frequency__c)),
  TEXT(ampi__Reporting_Frequency__c),
  TEXT(ampi__Target_Frequency__c)
  )</formula>
    <label>Target Frequency</label>
    <type>Text</type>
</CustomField>