force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Target_LOP__c.field-meta.xml
<CustomField>
    <fullName>ampi__Target_LOP__c</fullName>
    <description>Target value for a project indicator by the close of the parent project</description>
    <label>Life of Project Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>