force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Targets_Are_Disaggregated__c.field-meta.xml
<CustomField>
    <fullName>ampi__Targets_Are_Disaggregated__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox field to track whether targets are disaggregated at the same level as results. The value in this field determines the display of input fields on SetTargets and output fields on AddResults for this Project Indicator.</description>
    <inlineHelpText>Check this box if targets are tracked at the same disaggregation levels (i.e. by sex and/or custom disaggregation level) as results. Leave this box blank if targets are not tracked with any level of disaggregation.</inlineHelpText>
    <label>Targets Are Disaggregated?</label>
    <type>Checkbox</type>
</CustomField>