force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Thematic_Area_Ids__c.field-meta.xml
<CustomField>
    <fullName>ampi__Thematic_Area_Ids__c</fullName>
    <description>Trigger concatenates all IDs of Thematic Areas which have a child Project Indicator Thematic Area with the Project Indicator. This is used when filtering Project Indicators on the ManageIndicators page -- all Project Indicator records with the selected Thematic Area ID in this field will be shown in results.</description>
    <label>Thematic Area Ids</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>