force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Thematic_Area_Text_Language_3__c.field-meta.xml
<CustomField>
    <fullName>ampi__Thematic_Area_Text_Language_3__c</fullName>
    <description>Tertiary translated version of Thematic_Area_Text__c.</description>
    <label>Thematic Area Language 3</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>