force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Type__c.field-meta.xml
<CustomField>
    <fullName>ampi__Type__c</fullName>
    <description>This formula field copies the project indicator type (input, aggregated, or calculated) from parent indicator.</description>
    <formula>TEXT(ampi__Catalog_Indicator__r.ampi__Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>