force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Type_of_Results__c.field-meta.xml
<CustomField>
    <fullName>ampi__Type_of_Results__c</fullName>
    <defaultValue>&quot;Input&quot;</defaultValue>
    <description>Picklist field to select whether the results for this project indicator should be input manually, calculated from the results of other project indicators, or aggregated from individual-level data. The value in this field determines whether results are displayed as input or output text on AddResults and whether the user can access the popups for either the Aggregation Criteria or the Calculation Formula.</description>
    <inlineHelpText>Select whether the results for this Project Indicator should be input manually, calculated from the results of other indicators, or aggregated from individual-level data.</inlineHelpText>
    <label>Type of Results</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Input</fullName>
            </value>
            <value>
                <fullName>Aggregated</fullName>
            </value>
            <value>
                <fullName>Calculated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>