force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Units__c.field-meta.xml
<CustomField>
    <fullName>ampi__Units__c</fullName>
    <description>If a numeric project indicator has units of measurement, this text field can capture them (e.g. if project indicator is Amount of CO2, the units could be metric tons)</description>
    <label>Units</label>
    <length>255</length>
    <type>Text</type>
</CustomField>