force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Units_Language_2__c.field-meta.xml
<CustomField>
    <fullName>ampi__Units_Language_2__c</fullName>
    <description>Secondary translated version of Units__c. This value is printed in Units_Translated__c when USER_LANGUAGE_CODE = 2.</description>
    <label>Units Language 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>