force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Units_Language_3__c.field-meta.xml
<CustomField>
    <fullName>ampi__Units_Language_3__c</fullName>
    <description>Tertiary translated version of Units__c. This value is printed in Units_Translated__c when USER_LANGUAGE_CODE = 3.</description>
    <label>Units Language 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>