force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Validation_Range_Maximum__c.field-meta.xml
<CustomField>
    <fullName>ampi__Validation_Range_Maximum__c</fullName>
    <description>Number field to capture the maximum acceptable value that can be entered on the Set Targets and Add Results pages for this project indicator. When an entered target/result is greater than the value set on this field, a warning toast appears.</description>
    <inlineHelpText>Maximum acceptable value that can be entered on the Set Targets and Add Results pages.</inlineHelpText>
    <label>Validation Range Maximum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>