force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__xx_Is_Copy__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Is_Copy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is marked as true if the Project Indicator is being copied from another Project Indicator as part of the Copy from Another Framework feature.</description>
    <inlineHelpText>If this field is checked, then this Project Indicator is a copy.</inlineHelpText>
    <label>Is Copy?</label>
    <type>Checkbox</type>
</CustomField>