force-app/main/default/objects/ampi__Project_Indicator__c/fields/Baseline_Formula__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Formula__c</fullName>
    <formula>CASE(ampi__Data_Type__c,
&quot;Percent&quot;, TEXT(ampi__Baseline__c) &amp; &quot; %&quot;,
&quot;Currency&quot;, TEXT(ampi__Baseline__c) &amp; &quot; &quot; &amp; ampi__Reporting_Currency__c,
&quot;Qualitative&quot;, Baseline_Qualitative__c,
TEXT(ampi__Baseline__c))</formula>
    <label>Baseline</label>
    <type>Text</type>
</CustomField>