force-app/main/default/objects/ampi__Project_Indicator__c/fields/Baseline_Qualitative__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Qualitative__c</fullName>
    <inlineHelpText>Used for storing Baseline values for Qualitative indicators.</inlineHelpText>
    <label>Baseline (Qualitative)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>