force-app/main/default/objects/ampi__Project_Indicator__c/fields/Calculation_Method__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Method__c</fullName>
    <inlineHelpText>If necessary, describe how the indicator will be calculated.</inlineHelpText>
    <label>Calculation Method</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>