force-app/main/default/objects/ampi__Project_Indicator__c/fields/Catalogue_Source_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Catalogue_Source_Unique_ID__c</fullName>
    <description>Contains a unique ID made up of the Project ID and related Catalog Indicator ID. This is populated by Flow when adding an Indicator from the Catalogue (via the &quot;Create Project indicator flow), ensuring that there are no duplicate Project Indicators,</description>
    <inlineHelpText>Contains a unique ID made up of the Project ID and related Catalog Indicator ID. This is populated by Flow when adding an Indicator from the Catalogue (via the &quot;Create Project indicator flow), ensuring that there are no duplicate Project Indicators,</inlineHelpText>
    <label>Catalogue Source Unique ID</label>
    <length>250</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>