force-app/main/default/objects/ampi__Project_Indicator__c/fields/Info_Complete__c.field-meta.xml
<CustomField>
    <fullName>Info_Complete__c</fullName>
    <formula>IF(
AND(
NOT(ISBLANK(Name)),
NOT(ISBLANK(Responsible_Person__c)),
NOT(ISBLANK(ampi__Data_Type__c)),
NOT(ISBLANK(TEXT(ampi__Reporting_Frequency__c))),
IF(ampi__Data_Type__c = &quot;Qualitative&quot;, NOT(ISBLANK(Baseline_Qualitative__c)), NOT(ISBLANK(ampi__Baseline__c))),
IF(ampi__Data_Type__c = &quot;Qualitative&quot;, NOT(ISBLANK(Target_Qualitative_LOP__c)), NOT(ISBLANK(ampi__Target_LOP__c)))
), IMAGE(&quot;/img/func_icons/util/checkmark16.gif&quot;, &quot;Complete&quot;),
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Missing Info Required&quot;)
)</formula>
    <label>Info Complete?</label>
    <type>Text</type>
</CustomField>