force-app/main/default/objects/ampi__Project_Indicator__c/fields/Intended_Use__c.field-meta.xml
<CustomField>
    <fullName>Intended_Use__c</fullName>
    <label>Intended Use</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>