force-app/main/default/objects/ampi__Project_Indicator__c/fields/Known_Limits__c.field-meta.xml
<CustomField>
    <fullName>Known_Limits__c</fullName>
    <inlineHelpText>If applicable, example the restrictions of what the proposed indicator can and cannot show.</inlineHelpText>
    <label>Known Limits</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>