force-app/main/default/objects/ampi__Project_Indicator__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <description>Formula field to add to field set to allow Milestone and Actual Excel download; workaround for field set not accepting Number fields until Products solves.</description>
    <formula>TEXT(ampi__Target_LOP__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone</label>
    <type>Text</type>
</CustomField>