force-app/main/default/objects/ampi__Project_Indicator__c/fields/Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_ID__c</fullName>
    <formula>IF(ISBLANK(Project_Objective__c), &quot;&quot;, Project_Objective__r.Order_ID__c &amp; Order_Letter__c &amp; &quot;)&quot;)</formula>
    <label>Order ID</label>
    <type>Text</type>
</CustomField>