force-app/main/default/objects/ampi__Project_Indicator__c/fields/Order_Letter__c.field-meta.xml
<CustomField>
    <fullName>Order_Letter__c</fullName>
    <label>Order Letter</label>
    <length>1</length>
    <type>Text</type>
</CustomField>