force-app/main/default/objects/ampi__Project_Indicator__c/fields/Project_Objective__c.field-meta.xml
<CustomField>
    <fullName>Project_Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Result Statement</label>
    <referenceTo>ampi__Objective__c</referenceTo>
    <relationshipLabel>Project Indicators</relationshipLabel>
    <relationshipName>Project_Indicators</relationshipName>
    <type>Lookup</type>
</CustomField>