force-app/main/default/objects/ampi__Project_Indicator__c/fields/Project_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Record_Type__c</fullName>
    <formula>ampi__Project__r.RecordType.Name</formula>
    <label>Project Record Type</label>
    <type>Text</type>
</CustomField>