force-app/main/default/objects/ampi__Project_Indicator__c/fields/Responsible_Person__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Person__c</fullName>
    <inlineHelpText>Include the employee responsible for tracking this indicator (does not have to be a ProDIGI user).</inlineHelpText>
    <label>Responsible Person</label>
    <length>250</length>
    <type>Text</type>
</CustomField>