force-app/main/default/objects/ampi__Project_Indicator__c/fields/responsiblePerson__c.field-meta.xml
<CustomField>
    <fullName>responsiblePerson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible Person.</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Indicators</relationshipName>
    <type>Lookup</type>
</CustomField>