force-app/main/default/objects/ampi__Project_Indicator__c/fields/Result_Statement_Level__c.field-meta.xml
<CustomField>
    <fullName>Result_Statement_Level__c</fullName>
    <formula>TEXT(Project_Objective__r.ampi__Level__c)</formula>
    <label>Result Statement Level</label>
    <type>Text</type>
</CustomField>