force-app/main/default/objects/ampi__Project_Indicator__c/fields/Result_Statement_Link__c.field-meta.xml
<CustomField>
    <fullName>Result_Statement_Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Project_Objective__c, Project_Objective__r.ampi__Label__c, &quot;_blank&quot;)</formula>
    <label>Result Statement</label>
    <type>Text</type>
</CustomField>