force-app/main/default/objects/ampi__Project_Indicator__c/fields/Result_Statement_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Result_Statement_Order_ID__c</fullName>
    <formula>Project_Objective__r.Order_ID__c</formula>
    <label>Result Statement Order ID</label>
    <type>Text</type>
</CustomField>