force-app/main/default/objects/ampi__Project_Indicator__c/fields/Risks_Assumptions__c.field-meta.xml
<CustomField>
    <fullName>Risks_Assumptions__c</fullName>
    <label>Risks/Assumptions</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>