force-app/main/default/objects/ampi__Project_Indicator__c/fields/Source_of_Verification__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Verification__c</fullName>
    <label>Source of Verification</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>