force-app/main/default/objects/ampi__Project_Indicator__c/fields/Target_Formula__c.field-meta.xml
<CustomField>
    <fullName>Target_Formula__c</fullName>
    <formula>CASE(ampi__Data_Type__c,
&quot;Percent&quot;, TEXT(ampi__Target_LOP__c) &amp; &quot; %&quot;,
&quot;Currency&quot;, TEXT(ampi__Target_LOP__c) &amp; &quot; &quot; &amp; ampi__Reporting_Currency__c,
&quot;Qualitative&quot;, Target_Qualitative_LOP__c,
TEXT(ampi__Target_LOP__c))</formula>
    <label>Target</label>
    <type>Text</type>
</CustomField>