force-app/main/default/objects/ampi__Project_Indicator__c/fields/Target_Qualitative_LOP__c.field-meta.xml
<CustomField>
    <fullName>Target_Qualitative_LOP__c</fullName>
    <inlineHelpText>Used for storing the Life of Project Target for a Qualitative indicator.</inlineHelpText>
    <label>Target (Qualitative)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>