force-app/main/default/objects/ampi__Project_Indicator__c/fields/Timing__c.field-meta.xml
<CustomField>
    <fullName>Timing__c</fullName>
    <inlineHelpText>Specify when the indicator will be collected (e.g. the month)</inlineHelpText>
    <label>Timing</label>
    <length>250</length>
    <type>Text</type>
</CustomField>