force-app/main/default/objects/ampi__Project_Indicator__c/validationRules/Only_edit_1_baseline_or_target_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_edit_1_baseline_or_target_field</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
NOT(ISBLANK(ampi__Baseline__c)) &amp;&amp; NOT(ISBLANK( Baseline_Qualitative__c)),
NOT(ISBLANK(Target_Qualitative_LOP__c)) &amp;&amp; NOT(ISBLANK( Target_Qualitative_LOP__c))
)</errorConditionFormula>
    <errorMessage>Please only enter a value for the Baseline OR Qualitative Baseline field, Target OR Qualitative Target field.</errorMessage>
</ValidationRule>