force-app/main/default/objects/ampi__Project_Indicator__c/listViews/All_Indicators_for_grant.listView-meta.xml
<ListView>
    <fullName>All_Indicators_for_grant</fullName>
    <columns>ampi__Project__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>ampi__Guideline__c</columns>
    <columns>ampi__Description_Translated__c</columns>
    <columns>Catalogue_Source_Unique_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Record_Type__c</field>
        <operation>contains</operation>
        <value>Grant</value>
    </filters>
    <filters>
        <field>Catalogue_Source_Unique_ID__c</field>
        <operation>contains</operation>
        <value>a</value>
    </filters>
    <label>All Indicators for grant</label>
</ListView>