force-app/main/default/objects/ampi__Project_Indicator__c/listViews/ampi__All.listView-meta.xml
<ListView>
    <fullName>ampi__All</fullName>
    <columns>ampi__Project__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Responsible_Person__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ampi__Project__c</field>
        <operation>contains</operation>
        <value>Huambo RC - DONT CHANGE</value>
    </filters>
    <label>All</label>
</ListView>